...
                    }
                    .refreshable {
                        await artworkService.fetchArtworks(modelContext: modelContext, query: searchQuery)
                    }
                }
            }
            .navigationTitle("Art Gallery")
            .task {
                if artworkService.artworks.isEmpty {
                    await artworkService.fetchArtworks(modelContext: modelContext, query: searchQuery)
                }
            }
            .alert("Error", isPresented: $showErrorAlert) {
...
