...
                    }
                }

                NavigationLink {
                    coordinator.makeAddExpenseView(context: modelContext)
                } label: {
                    Text("Add New Expense")
                        .frame(maxWidth: .infinity)
                        .padding()
                        .background(.blue)
                        .foregroundColor(.white)
                        .cornerRadius(12)
                }
...
